--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,14 @@
             <input type="file" id="img_file" name="img_file" accept="image/png, image/jpeg" onchange="display_image(this);">
             <input type="submit" name="submit">
         </form>
-        <img id="input_image">
+        <div id="imgs">
+            <div class="user_img" id="input_img_div">
+                <img id="input_image">
+            </div>
+            <div class="user_img" id="output_img_div">
+                
+            </div>
+        </div>
     </div>
 </body>
 </html>
