--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="//cdn.bootcss.com/socket.io/1.5.1/socket.io.min.js"></script>
 <script src="static/js/index.js"></script>
 <link rel="stylesheet" type="text/css" href="/static/css/index.css">
-<title>\^o^/</title>
+<title>watercolorization!</title>
 </head>
 <body>
     <p id="title">watercolorization!</p>
