--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,95 +1,55 @@
-body{
-    width:100%;
-    height: 100%;
-}
-
 #title{
-    width:100%;
+    margin-top: 5px;
     text-align: center;
-    font-size: 50px;
-    padding:10px;
-    margin:0;
+    font-size: 30px;
 }
 
-#desktop{
-    width:90%;
-    height: 100%;
-    margin-left:auto;
-    margin-right:auto;
+#logo{
+    height: 40px;
 }
 
-form{
-    display:flex;
-    justify-content: center;
-}
-
-#imgs{
-    display:flex;
-    justify-content: center;
+#input_image{
     width:100%;
-}
-
-.user_img{
-    max-width: 40%;
-    float:left;
-    position: relative;
-    margin: 10px;
-}
-
-img{
-    width:100%;
+    margin-bottom: 10px;
 }
 
 #loading_img{
-    width:70px;
-    height: 70px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left:0;
-    right: 0;
-    margin: auto;
+    width:50px;
+    height: 50px;
 }
 
-@media  (-webkit-device-pixel-ratio: 3), 
-        (max-device-width:400px) { 
-        
-    body{
-        width:100%;
-    }
+#output_img{
+    width:100%;
+    margin-bottom: 10px;
+}
 
+/* Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {  
     #title{
-        font-size: 100px;
-    }
-
-    form{
-        display: inline;
-        justify-content:flex-start;
-    }
-
-    input{
-        height: 70px;
         font-size: 40px;
     }
+}
 
-    #imgs{
-        display:inline;
-        justify-content: flex-start;
+/* Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+    #title{
+        font-size: 50px;
     }
-
-    .user_img{
-        max-width: 100%;
-        float:inline-start;
-        margin:10px;
-    }
-
-    input[type="file"]::-webkit-file-upload-button {
-        height: 70px;
-        font-size: 30px;
-    }
-
-    #output_img_div{
-        min-height: 100px;
+    #logo{
+        height: 50px;
     }
 }
 
+/* Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+    #title{
+        font-size: 60px;
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+    #title{
+        font-size: 70px;
+    }
+}
