--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type="text/javascript" src="//cdn.bootcss.com/socket.io/1.5.1/socket.io.min.js"></script>
 <script src="static/js/index.js"></script>
@@ -7,18 +10,31 @@
 <title>watercolorization!</title>
 </head>
 <body>
-    <p id="title">watercolorization!</p>
-    <div id="desktop">
-        <!--<form action="/submit" method="POST" enctype="multipart/form-data">-->
-        <form id="submit_form">
-            <input type="file" id="img_file" name="img_file" accept="image/png, image/jpeg" onchange="display_image(this);">
-            <input type="submit" name="submit">
-        </form>
-        <div id="imgs">
-            <div class="user_img" id="input_img_div">
-                <img id="input_image">
+    <div class="container-fluid h-100" id="cf">
+        <div class="row"><div class="col-12"><img id="logo" src="/static/img/hiroshima-university.png"></div></div>
+        <div class="row text-center">
+            <div class="col-12">
+                <p id="title">watercolorization!</p>
             </div>
-            <div class="user_img" id="output_img_div">
+        </div>
+        <form id="submit_form">
+            <div class="row justify-content-center">
+                    <div class="col-md-4">
+                        <input type="file" id="img_file" name="img_file" accept="image/png, image/jpeg" onchange="display_image(this);">
+                    </div>
+                    <div class="col-md-1">
+                        <input type="submit" name="submit">
+                    </div>
+                
+            </div>
+        </form>
+        <div class="row h-100 align-items-center" style="margin-top:15px;margin-bottom: 15px;">
+            <div class="col-12 col-md-6">
+                <div class="user_img" id="input_img_div">
+                    <img id="input_image">
+                </div>
+            </div>
+            <div class="col-12 col-md-6  align-items-center" id="output_img_div">
                 
             </div>
         </div>
