add <a> in title

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <div class="row text-center">
             <div class="col-12" style="padding:0;">
                 <!-- <p id="title">watercolorization!</p> -->
-                <p id="title">水彩化ツール</p>
+                <p id="title"><a href="/" style="text-decoration: none;color:white;">水彩変換ツール</a></p>
             </div>
         </div>
         <form id="submit_form">
