--- a/static/css/index.css
+++ b/static/css/index.css
@@ -28,6 +28,11 @@
     margin-bottom: 10px;
 }
 
+#bar label{
+    margin-top:3px;
+    margin-bottom:3px;
+}
+
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) {  
     #title{
