--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         </form>
         <div id="bar" class="row justify-content-center d-none d-md-block mx-auto" style="max-width: 800px;margin-top:7px;margin-bottom: 7px;">
             <div class="col-10 text-center">
-                <div class="form-row">
+                <div class="form-row align-items-center">
                     <label for="range_scale" class="col-1">scale</label>
                     <span id="scale_value" class="col-1">1</span>
                     <input class="form-control-range col-10" id="range_scale" type="range" min="0.5" max="1" value="1" step="0.01" oninput="document.getElementById('scale_value').innerText = document.getElementById('range_scale').value"/>
