--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="row"><div class="col-12 text-center" id="return_msg"></div></div>
         <div class="row h-100 align-items-center mx-auto" style="margin-top:7px;margin-bottom:7px; max-width: 1500px;">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6" style="padding:0;">
                 <div class="user_img" id="input_img_div">
                     <img id="input_image">
                 </div>
