--- a/static/css/index.css
+++ b/static/css/index.css
@@ -28,6 +28,14 @@
     margin-bottom: 10px;
 }
 
+#output_img_div{
+    padding:0;
+}
+
+#input_img_div{
+    padding:0;
+}
+
 #bar label{
     margin-top:3px;
     margin-bottom:3px;
@@ -47,6 +55,14 @@
     }
     #logo{
         height: 40px;
+    }
+
+    #output_img_div{
+        padding:10px;
+    }
+    
+    #input_img_div{
+        padding:10px;
     }
 }
 
