--- a/templates/index.html
+++ b/templates/index.html
@@ -50,12 +50,12 @@
                 <div class="form-row align-items-center">
                     <label class="col-3" for="select_scale" style="margin:0;">scale</label>
                     <select class="col-9" id="select_scale">
-                        <option>0.5</option>
-                        <option>0.6</option>
-                        <option selected="selected">0.7</option>
-                        <option>0.8</option>
-                        <option>0.9</option>
                         <option>1.0</option>
+                        <option>0.9</option>
+                        <option>0.8</option>
+                        <option>0.7</option>
+                        <option>0.6</option>
+                        <option>0.5</option>
                     </select>
 
                     <label class="col-3" for="select_layers" style="margin:0;">layers</label>
@@ -79,7 +79,7 @@
         </div>
         <div class="row"><div class="col-12 text-center" id="return_msg"></div></div>
         <div class="row h-100 align-items-center mx-auto" style="margin-top:7px;margin-bottom:7px; max-width: 1500px;">
-            <div class="col-12 col-md-6" style="padding:0;">
+            <div class="col-12 col-md-6" style="padding:0px;">
                 <div class="user_img" id="input_img_div">
                     <img id="input_image">
                 </div>
