--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                         <option>1.0</option>
                         <option>0.9</option>
                         <option>0.8</option>
-                        <option>0.7</option>
+                        <option selected="selected">0.7</option>
                         <option>0.6</option>
                         <option>0.5</option>
                     </select>
