--- a/static/css/index.css
+++ b/static/css/index.css
@@ -41,6 +41,10 @@
     margin-bottom:3px;
 }
 
+#settings2 > select{
+    margin-bottom: 2px;
+}
+
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) {  
     #title{
