--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,12 @@
         <div id="bar" class="row justify-content-center d-none d-md-block mx-auto" style="max-width: 800px;margin-top:7px;margin-bottom: 7px;">
             <div class="col-11 mx-auto">
                 <div class="form-row align-items-center text-center" id="basic_setting">
+                    <label class="col-3" for="select_GPU" style="margin:0;" id="gpu_label"></label>
+                    <select class="col-9" id="select_GPU">
+                        <option val='A100'>A100</option>
+                        <option val='A6000'>A6000</option>
+                    </select>
+
                     <label for="range_scale" class="col-1">scale</label>
                     <span id="scale_value" class="col-1">1</span>
                     <input class="form-control-range col-10" id="range_scale" type="range" min="0.5" max="1" value="1" step="0.01" oninput="document.getElementById('scale_value').innerText = document.getElementById('range_scale').value"/>
