--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,9 @@
         <div id="bar" class="row justify-content-center d-none d-md-block mx-auto" style="max-width: 800px;margin-top:7px;margin-bottom: 7px;">
             <div class="col-11 mx-auto">
                 <div class="form-row align-items-center text-center" id="basic_setting">
-                    <label class="col-3" for="select_GPU" style="margin:0;" id="gpu_label"></label>
-                    <select class="col-9" id="select_GPU">
+                    <label class="col-1" for="select_GPU" style="margin:0;">GPU</label>
+                    <span id="gpu_span" class="col-1"></span>
+                    <select class="col-10" id="select_GPU">
                         <option val='A100'>A100</option>
                         <option val='A6000'>A6000</option>
                     </select>
