--- a/templates/index.html
+++ b/templates/index.html
@@ -92,6 +92,12 @@
                     </div>
                 </div>
                 <div class="form-row align-items-center" id="settings2" style="display: none;">
+                    <label class="col-3" for="select_GPU" style="margin:0;">GPU</label>
+                    <select class="col-9" id="select_GPU2">
+                        <option val='A100'>A100</option>
+                        <option val='A6000'>A6000</option>
+                    </select>
+
                     <label class="col-3" for="select_scale" style="margin:0;">scale</label>
                     <select class="col-9" id="select_scale">
                         <option>1.0</option>
