--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,9 @@
                     <span id="saturation_value" class="col-1">2</span>
                     <input class="form-control-range col-10" id="range_saturation" type="range" min="0.5" max="3" value="2" step="0.1" oninput="document.getElementById('saturation_value').innerText = document.getElementById('range_saturation').value"/>
                 
+                    <label for="range_fineness" class="col-1">fineness</label>
+                    <span id="fineness_value" class="col-1">4</span>
+                    <input class="form-control-range col-10" id="range_fineness" type="range" min="2" max="10" value="4" step="1" oninput="document.getElementById('fineness_value').innerText = document.getElementById('range_fineness').value"/>
                 
                 </div>
                 <div class="row">
@@ -139,6 +142,20 @@
                         <option>2.5</option>
                         <option selected="selected">2</option>
                         <option>1.5</option>
+                        <option>1</option>
+                    </select>
+
+                    <label class="col-3" for="select_fineness" style="margin:0;">fineness</label>
+                    <select class="col-9" id="select_fineness">
+                        <option>10</option>
+                        <option>9</option>
+                        <option>8</option>
+                        <option>7</option>
+                        <option>6</option>
+                        <option>5</option>
+                        <option selected="selected">4</option>
+                        <option>3</option>
+                        <option>2</option>
                         <option>1</option>
                     </select>
 
